# TaskPlusPlus

./: .gitignore  CMakeLists.txt  README.md
headers/: archive.h  home.h  list.h  priority.h  prompt.h  recommender.h  task.h  taskList.h  upcoming.h  view.h  weekly.h
src/: CMakeLists.txt  a.out  archive.cpp  home.cpp  main.cpp  priority.cpp  prompt.cpp  recommender.cpp  task.cpp  taskList.cpp  upcoming.cpp  view.cpp  weekly.cpp
tests/: CMakeLists.txt  archiveTest.cpp  homeTest.cpp  promptTest.cpp  recommenderTest.cpp  taskListTest.cpp  taskTest.cpp  upcomingTest.cpp  viewTest.cpp  weeklyTest.cpp
